@@ -6197,7 +6197,13 @@ function waits for output unless NOOUTPUT is set."
     (let ((found
 	   (tramp-wait-for-regexp
 	    proc timeout
-	    (format "^%s\r?$" (regexp-quote tramp-end-of-output)))))
+	    ;; Initially, `tramp-end-of-output' is "$ ".  There might
+	    ;; be leading escape sequences, which must be ignored.
+ 	    (format
+	     (if (string-equal tramp-end-of-output "$ ")
+		 "^[^$]*%s\r?$"
+	       "^%s\r?$")
+	     (regexp-quote tramp-end-of-output)))))
       (if found
 	  (let (buffer-read-only)
 	    (goto-char (point-max))
