@@ -1,3 +1,8 @@
+2007-11-05  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-wait-for-output): Ignore escape sequences in the
+	prompt.
+
 2007-10-31  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-shell-command): Call `start-file-process'
